# agent-pack

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: task-management.md
docs/: functional-spec.md  user-guide.md
src/agent_conf/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
